[package]
name = "rext"
version = "0.1.0"
authors = ["Bryce Campbell <tonyhawk2100@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.1", features = ["yaml"] }
shellexpand = "2.0.0"
walkdir = "2"
winapi = "0.3.9"