[package]
name = "rext"
version = "0.1.0"
description = "tool that can easily change file extensions"
authors = ["Bryce Campbell <tonyhawk2100@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
shellexpand = "2.0.0"
walkdir = "2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3.9"